# stock-strategies-only

./: .gitignore  README.md  main.py  premarket.py  premarket.yml  pyproject.toml
.github/workflows/: daily.yml  premarket.yml
api/: main.py
api/services/: ai_generator.py
docs/design/: ui-ux-design-brief.md
docs/superpowers/plans/: 2026-06-13-P2-factor-library.md
stock_strategies/: backtest.py  cache.py  config.py  context.py  data.py  datasources.py  evaluate.py  indicators.py  loader.py  market.py  night_session.py  notify.py  performance.py  sheet.py  time_utils.py  volume.py
stock_strategies/factors/: __init__.py  base.py  chips.py  legacy.py  momentum.py  panel.py  registry.py  value.py
strategies/: SCHEMA.md  conservative.json  default.json
tests/: conftest.py  test_build_context.py  test_cache_paths.py  test_config_constants.py  test_context_dataclass.py  test_context_from_bundle.py  test_context_indicators.py  test_data_cached_regression.py  test_ds_index.py  test_ds_info.py  test_ds_institutional.py  test_ds_margin.py  test_ds_revenue.py  test_ds_shareholding.py  test_ds_valuation.py  test_fetch_cached.py  test_market_regression.py  test_rate_limit.py  test_report_schedule.py
tests/factors/: test_base.py  test_chips.py  test_integration.py  test_legacy.py  test_momentum.py  test_panel.py  test_registry.py  test_value.py
web/: .env.local.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ActionBadge.tsx  StrategyForm.tsx
web/lib/: api.ts
(+5 files in other folders)
