[project]
name = "stock-strategies-only"
version = "0.2.0"
description = "V3.2 每日選股訊號系統 + 策略庫 / AI 生策略 web UI"
requires-python = ">=3.11"
dependencies = [
    "google-auth>=2.49.2",
    "gspread>=6.2.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "google-generativeai>=0.8.0",
]
